<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

      <TextView
          android:id="@+id/Title"
          style="@style/TextAppearance.MaterialComponents.Headline6"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/design_default_color_primary"
          android:paddingStart="24dp"
          android:paddingTop="16dp"
          android:paddingEnd="24dp"
          android:paddingBottom="16dp"
          android:text="@string/title"
          android:textColor="#fff"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterImageDimensions"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/Image_dimensionTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/widthInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/Width"
        app:layout_constraintEnd_toStartOf="@+id/heightInput"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterImageDimensions">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="4" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/heightInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:hint="@string/Height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/widthInput"
        app:layout_constraintTop_toBottomOf="@+id/enterImageDimensions">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="4" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/fetchImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/fetchImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightInput" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/inputDimensionsRoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="fetchImageButton,heightInput,widthInput,enterImageDimensions" />

      <TextView
          android:id="@+id/progressSubtitle"
          style="@style/TextAppearance.MaterialComponents.Headline6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="16dp"
          android:text="@string/FetchingImagePB"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/Title" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/progressSubtitle" />

      <androidx.constraintlayout.widget.Group
          android:id="@+id/progressIndicatorRoot"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:visibility="gone"
          app:constraint_referenced_ids="progressIndicator,progressSubtitle" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toStartOf="@+id/progressSubtitle"
        app:layout_constraintStart_toStartOf="@+id/progressSubtitle"
        app:layout_constraintTop_toBottomOf="@id/Title" />

      <TextView
          android:id="@+id/paletteColorTV"
          style="@style/TextAppearance.MaterialComponents.Headline6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:layout_marginTop="16dp"
          android:text="@string/Palette_ColorTV"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/colorChips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paletteColorTV"
        app:singleSelection="true">


    </com.google.android.material.chip.ChipGroup>

      <TextView
          android:id="@+id/ChooseLabelTitle"
          style="@style/TextAppearance.MaterialComponents.Headline6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:layout_marginTop="16dp"
          android:text="@string/LabelTV"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/colorChips" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/labelChips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ChooseLabelTitle"
        app:singleSelection="true">

    </com.google.android.material.chip.ChipGroup>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/customLabelInput"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="24dp"
          android:hint="@string/LabelHint"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/labelChips">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/CustomLabelET"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text" />

      </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/AddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/AddBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customLabelInput" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/mainRoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="colorChips,imageView,paletteColorTV,labelChips,customLabelInput,AddButton,ChooseLabelTitle,shareImgBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>